--- a/index.css
+++ b/index.css
@@ -1,6 +1,10 @@
+* {
+  box-sizing: border-box;
+}
 html,
 body {
   height: 100%;
+  width: 100%;
   padding: 0;
   margin: 0;
   background: violet;
@@ -10,30 +14,37 @@ body {
 canvas {
   width: 100%;
   height: 100%;
+  position: relative;
 }
 
 .typewriter {
-    padding: 50px 0;
+  position: absolute;
+  top: 300px;
+  left: 0;
+  padding: 50px 0;
+  width: 100%;
 }
 
 .typewriter h1 {
   text-align: center;
   font-family: monospace;
+  font-size: 36px;
+  font-weight: bold;
   overflow: hidden; /* Ensures the content is not revealed until the animation */
   border-right: 0.15em solid orange; /* The typwriter cursor */
-  white-space: nowrap; /* Keeps the content on a single line */
-  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  margin: 20px auto; /* Gives that scrolling effect as the typing happens */
+  white-space: nowrap;
   letter-spacing: 0.15em; /* Adjust as needed */
   animation: typing 3.5s steps(40, end), blink-caret 0.75s step-end infinite;
 }
 
 .typewriter img {
-    border: none;  
-    width: 30px;
-    height: 30px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    border-width: 0;
+  border: none;
+  width: 30px;
+  height: 30px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  border-width: 0;
 }
 
 /* The typing effect */
